--- a/frontend/src/styles/tv.css
+++ b/frontend/src/styles/tv.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
 /* Style de la zone d'affichage de la TV */
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
 .tv-display {
     display: flex;
     justify-content: center;
